@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-01T00:38:13Z",
+  "timestamp" : "2025-02-02T00:37:53Z",
   "count_outdated" : 1195,
   "uniques_outdated" : 724,
-  "count" : 1197,
-  "uniques" : 726,
+  "count" : 1198,
+  "uniques" : 727,
   "clones" : [
     {
       "timestamp": "2025-01-19T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-01-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
